fix: center alignment issue on all godam pages

--- a/pages/godam/index.scss
+++ b/pages/godam/index.scss
@@ -131,6 +131,7 @@ $settings-page-breakpoint: 782px;
 			gap: 2em;
 			position: relative;
 			background-color: #f0f0f1;
+			margin: 0 auto;
 
 			@media (max-width: $settings-page-breakpoint) {
 				margin: 20px auto;
